<resources>
    <string name="app_name">CRUDINICIAL</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_index">Index</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ruc">RUC:</string>
    <string name="usuario">USUARIO:</string>
    <string name="password">PASSWORD:</string>
    <string name="login">LOGIN</string>
    <string name="nombre_cliente">Nombre:</string>
    <string name="compartir">Compartir</string>
    <string name="descripcion">Descripcion</string>
    <string name="disponible">Disponible:</string>
    <string name="precio">Precio:</string>
    <string name="otros">Otros</string>
    <string name="fotos">Fotos</string>
    <string name="color">Color</string>
    <string name="ficha">Ficha</string>
    <string name="cantidad">N° Cant:</string>
</resources>
