<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaArticulosDesc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_cliente"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/et_nom_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Nombre de Familia Obtenida"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="100dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/colorWhite"
                        android:src="@drawable/compartir" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/compartir"
                        android:textColor="@color/colorBlack" />

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/colorWhite"
                        android:src="@drawable/ayudar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/iv_imagen"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:background="@drawable/polo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/disponible"
                            android:textColor="@color/colorBlack" />

                        <TextView
                            android:id="@+id/et_stock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="500 unidades"
                            android:paddingLeft="10dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/precio"
                            android:textColor="@color/colorBlack" />

                        <TextView
                            android:id="@+id/et_precio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="S/. 50.00"
                            android:paddingLeft="10dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/otros" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fotos" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ficha" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cantidad"
                android:textColor="@color/colorBlack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:scaleType="centerInside"
                android:src="@drawable/agregar_producto"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>